--- a/v/refs/heads/main/notebooks/01-05-Calibration-overview.html
+++ b/v/refs/heads/main/notebooks/01-05-Calibration-overview.html
@@ -293,7 +293,7 @@
 </nav> <!-- To handle the deprecated key -->
 
 <div class="navbar_extra_footer">
-  <h2>Book edition 2.0.0.dev</h2></br>
+  <h2>Book edition 2.0.0</h2></br>
 Powered by <a href="https://jupyterbook.org">Jupyter Book</a> and
 <a href="https://astropy.org">Astropy</a>
 
