--- a/v/dev/genindex.html
+++ b/v/dev/genindex.html
@@ -292,7 +292,9 @@
 </nav> <!-- To handle the deprecated key -->
 
 <div class="navbar_extra_footer">
-  <h2>Book edition 2.0.0</h2></br>
+  <h2>Book edition: development</h2>
+<strong>Previous editions</strong></br>
+<a href="v/2.0.0/index.html">2.0.0</a></br>
 Powered by <a href="https://jupyterbook.org">Jupyter Book</a> and
 <a href="https://astropy.org">Astropy</a>
 
