--- a/v/dev/notebooks/08-05-incorporating-masks-into-calibrated-science-images.html
+++ b/v/dev/notebooks/08-05-incorporating-masks-into-calibrated-science-images.html
@@ -300,7 +300,9 @@
 </nav> <!-- To handle the deprecated key -->
 
 <div class="navbar_extra_footer">
-  <h2>Book edition 2.0.0</h2></br>
+  <h2>Book edition: development</h2>
+<strong>Previous editions</strong></br>
+<a href="v/2.0.0/index.html">2.0.0</a></br>
 Powered by <a href="https://jupyterbook.org">Jupyter Book</a> and
 <a href="https://astropy.org">Astropy</a>
 
@@ -512,7 +514,7 @@ the masks.</p>
 </div>
 <div class="cell_output docutils container">
 <div class="output text_html"><div><i>Table length=36</i>
-<table id="table140245648084272" class="table-striped table-bordered table-condensed">
+<table id="table140028014499392" class="table-striped table-bordered table-condensed">
 <thead><tr><th>file</th><th>imagetyp</th></tr></thead>
 <thead><tr><th>str31</th><th>str9</th></tr></thead>
 <tr><td>AutoFlat-PANoRot-r-Bin1-001.fit</td><td>FLAT</td></tr>
