deploy: ffd220a15c69c5856920ba273e85278ed6a12b22

--- a/v/dev/notebooks/01-00-Understanding-an-astronomical-CCD-image.html
+++ b/v/dev/notebooks/01-00-Understanding-an-astronomical-CCD-image.html
@@ -301,7 +301,7 @@
 </nav> <!-- To handle the deprecated key -->
 
 <div class="navbar_extra_footer">
-  <h2>Book edition: development</h2>
+  <h2>Book edition: 2.0.1rc1</h2>
 <strong>Previous editions</strong></br>
 <a href="../../../v/2.0.0/index.html">2.0.0</a></br>
 Powered by <a href="https://jupyterbook.org">Jupyter Book</a> and
