--- a/v/dev/notebooks/03-06-Combine-darks-for-use-in-later-calibration-steps.html
+++ b/v/dev/notebooks/03-06-Combine-darks-for-use-in-later-calibration-steps.html
@@ -301,9 +301,10 @@
 </nav> <!-- To handle the deprecated key -->
 
 <div class="navbar_extra_footer">
-  <h2>Book edition: 2.0.1rc1</h2>
+  <h2>Book edition: 2.0.1</h2>
 <strong>Previous editions</strong></br>
 <a href="../../../v/2.0.0/index.html">2.0.0</a></br>
+<a href="../../../v/dev/index.html">dev (latest)</a></br>
 Powered by <a href="https://jupyterbook.org">Jupyter Book</a> and
 <a href="https://astropy.org">Astropy</a>
 
