deploy: a77ef89c5c5f55f6b64c9a546550cc4d8ff15031

--- a/v/dev/notebooks/08-05-incorporating-masks-into-calibrated-science-images.html
+++ b/v/dev/notebooks/08-05-incorporating-masks-into-calibrated-science-images.html
@@ -300,8 +300,9 @@
 </nav> <!-- To handle the deprecated key -->
 
 <div class="navbar_extra_footer">
-  <h2>Book edition: 2.0.1</h2>
+  <h2>Book edition: dev</h2>
 <strong>Previous editions</strong></br>
+<a href="../../../v/2.0.1/index.html">2.0.1</a></br>
 <a href="../../../v/2.0.0/index.html">2.0.0</a></br>
 <a href="../../../v/dev/index.html">dev (latest)</a></br>
 Powered by <a href="https://jupyterbook.org">Jupyter Book</a> and
@@ -515,7 +516,7 @@ the masks.</p>
 </div>
 <div class="cell_output docutils container">
 <div class="output text_html"><div><i>Table length=36</i>
-<table id="table140269554209600" class="table-striped table-bordered table-condensed">
+<table id="table140312356249712" class="table-striped table-bordered table-condensed">
 <thead><tr><th>file</th><th>imagetyp</th></tr></thead>
 <thead><tr><th>str31</th><th>str9</th></tr></thead>
 <tr><td>AutoFlat-PANoRot-r-Bin1-001.fit</td><td>FLAT</td></tr>
