deploy: 19ae7c3d3ce032a0b38577dd8d62f8c7b0284028

--- a/v/dev/notebooks/00-00-Preface.html
+++ b/v/dev/notebooks/00-00-Preface.html
@@ -829,6 +829,7 @@ code, or providing feedback on drafts. We are grateful for their assistance!</p>
 <li><p>Lia Corrales</p></li>
 <li><p>Kelle Cruz</p></li>
 <li><p>Adam Ginsburg</p></li>
+<li><p>Johannes Goller</p></li>
 <li><p>Yash Gondhalekar</p></li>
 <li><p>Lia G</p></li>
 <li><p>Richard Hendricks</p></li>
