--- a/v/pdev/notebooks/photometry/01.04.01-image-segmentation-simulated-image.html
+++ b/v/pdev/notebooks/photometry/01.04.01-image-segmentation-simulated-image.html
@@ -92,6 +92,12 @@ commentsRunWhenDOMLoaded(addUtterances);
     <script>var togglebuttonSelector = '.toggle, .admonition.dropdown';</script>
     <script>const THEBE_JS_URL = "https://unpkg.com/thebe@0.8.2/lib/index.js"; const thebe_selector = ".thebe,.cell"; const thebe_selector_input = "pre"; const thebe_selector_output = ".output, .cell_output"</script>
     <script>DOCUMENTATION_OPTIONS.pagename = 'notebooks/photometry/01.04.01-image-segmentation-simulated-image';</script>
+    <script>
+        DOCUMENTATION_OPTIONS.theme_version = '0.15.4';
+        DOCUMENTATION_OPTIONS.theme_switcher_json_url = 'https://raw.githubusercontent.com/astropy/ccd-reduction-and-photometry-guide/photometry-dev/switcher.json';
+        DOCUMENTATION_OPTIONS.theme_switcher_version_match = 'dev';
+        DOCUMENTATION_OPTIONS.show_version_warning_banner = false;
+        </script>
     <link rel="icon" href="../../_static/favicon.ico"/>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
@@ -204,6 +210,29 @@ commentsRunWhenDOMLoaded(addUtterances);
    </button>
  `);
  </script></div>
+        <div class="sidebar-primary-item">
+<script>
+document.write(`
+  <div class="version-switcher__container dropdown">
+    <button id="pst-version-switcher-button-2"
+      type="button"
+      class="version-switcher__button btn btn-sm dropdown-toggle"
+      data-bs-toggle="dropdown"
+      aria-haspopup="listbox"
+      aria-controls="pst-version-switcher-list-2"
+      aria-label="Version switcher list"
+    >
+      Choose version  <!-- this text may get changed later by javascript -->
+      <span class="caret"></span>
+    </button>
+    <div id="pst-version-switcher-list-2"
+      class="version-switcher__menu dropdown-menu list-group-flush py-0"
+      role="listbox" aria-labelledby="pst-version-switcher-button-2">
+      <!-- dropdown will be populated by javascript on page load -->
+    </div>
+  </div>
+`);
+</script></div>
         <div class="sidebar-primary-item"><nav class="bd-links bd-docs-nav" aria-label="Main">
     <div class="bd-toc-item navbar-nav active">
         
@@ -605,7 +634,7 @@ document.write(`
 </div>
 </div>
 <div class="cell_output docutils container">
-<img alt="../../_images/06cc9c267fba25c2ee3fa65a5d342d66862e40b4aff80314c0545e3e939132c6.png" src="../../_images/06cc9c267fba25c2ee3fa65a5d342d66862e40b4aff80314c0545e3e939132c6.png" />
+<img alt="../../_images/7d6daa6cf466ec3f9b95ee6b6a2567c9e0f3f8cb6839b112c529e31501b9d6a0.png" src="../../_images/7d6daa6cf466ec3f9b95ee6b6a2567c9e0f3f8cb6839b112c529e31501b9d6a0.png" />
 </div>
 </div>
 <p>Now we create a detection image, called <code class="docutils literal notranslate"><span class="pre">detected_image</span></code> below, in which all pixels with value larger than 3 times the standard deviation are set to one, and the rest set to zero. In this example, the detect pixels fall into one of two connected groups, by construction.</p>
@@ -636,7 +665,7 @@ document.write(`
 </div>
 </div>
 <div class="cell_output docutils container">
-<img alt="../../_images/fb36000a94f196ee77fc418fb52633194e6ae315f895aad033424445304b5ba1.png" src="../../_images/fb36000a94f196ee77fc418fb52633194e6ae315f895aad033424445304b5ba1.png" />
+<img alt="../../_images/8a91c7f003ad630bf7f5012ae786f9845395a9ea862ca206531ceb7f42b67837.png" src="../../_images/8a91c7f003ad630bf7f5012ae786f9845395a9ea862ca206531ceb7f42b67837.png" />
 </div>
 </div>
 <p>That, in a nutshell, is image segmentation. The implementation is more complicated than what is done above, and the image is typically convolved with a filter before doing the segmentation, but the gist of the method is straightforward.</p>
