--- a/v/pdev/notebooks/photometry/01.04.02-image-segmentation-XDF.html
+++ b/v/pdev/notebooks/photometry/01.04.02-image-segmentation-XDF.html
@@ -92,6 +92,12 @@ commentsRunWhenDOMLoaded(addUtterances);
     <script>var togglebuttonSelector = '.toggle, .admonition.dropdown';</script>
     <script>const THEBE_JS_URL = "https://unpkg.com/thebe@0.8.2/lib/index.js"; const thebe_selector = ".thebe,.cell"; const thebe_selector_input = "pre"; const thebe_selector_output = ".output, .cell_output"</script>
     <script>DOCUMENTATION_OPTIONS.pagename = 'notebooks/photometry/01.04.02-image-segmentation-XDF';</script>
+    <script>
+        DOCUMENTATION_OPTIONS.theme_version = '0.15.4';
+        DOCUMENTATION_OPTIONS.theme_switcher_json_url = 'https://raw.githubusercontent.com/astropy/ccd-reduction-and-photometry-guide/photometry-dev/switcher.json';
+        DOCUMENTATION_OPTIONS.theme_switcher_version_match = 'dev';
+        DOCUMENTATION_OPTIONS.show_version_warning_banner = false;
+        </script>
     <link rel="icon" href="../../_static/favicon.ico"/>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
@@ -204,6 +210,29 @@ commentsRunWhenDOMLoaded(addUtterances);
    </button>
  `);
  </script></div>
+        <div class="sidebar-primary-item">
+<script>
+document.write(`
+  <div class="version-switcher__container dropdown">
+    <button id="pst-version-switcher-button-2"
+      type="button"
+      class="version-switcher__button btn btn-sm dropdown-toggle"
+      data-bs-toggle="dropdown"
+      aria-haspopup="listbox"
+      aria-controls="pst-version-switcher-list-2"
+      aria-label="Version switcher list"
+    >
+      Choose version  <!-- this text may get changed later by javascript -->
+      <span class="caret"></span>
+    </button>
+    <div id="pst-version-switcher-list-2"
+      class="version-switcher__menu dropdown-menu list-group-flush py-0"
+      role="listbox" aria-labelledby="pst-version-switcher-button-2">
+      <!-- dropdown will be populated by javascript on page load -->
+    </div>
+  </div>
+`);
+</script></div>
         <div class="sidebar-primary-item"><nav class="bd-links bd-docs-nav" aria-label="Main">
     <div class="bd-toc-item navbar-nav active">
         
@@ -852,7 +881,7 @@ Length = 1325 rows
 </div>
 </div>
 <div class="cell_output docutils container">
-<img alt="../../_images/efac2868d312cf3c0808b3802e7dca8d2729f2fcfdc94279f1654f53187f18cb.png" src="../../_images/efac2868d312cf3c0808b3802e7dca8d2729f2fcfdc94279f1654f53187f18cb.png" />
+<img alt="../../_images/3f5594815be9b8088c6bc71d2c5f8ac8202eb757327d101252097148cc67ffcf.png" src="../../_images/3f5594815be9b8088c6bc71d2c5f8ac8202eb757327d101252097148cc67ffcf.png" />
 </div>
 </div>
 <p>Star finding finds almost all of the point-like sources in these cutouts, but also identifies many sources in each extended object. Peak finding misses many of the star-like objects and sometimes assigns multiple objects to a single extended source. Image segmentation identifies extended sources as single objects but misses most of the small star-like objects. Adjusting the image segmentation parameters to allow smaller sources would improve detection of those objects.</p>
