deploy: 684e61adf0fa51ee753b12425c39f313521219e8

--- a/v/dev/notebooks/00-00-Preface.html
+++ b/v/dev/notebooks/00-00-Preface.html
@@ -824,6 +824,7 @@ Science Institute.</p>
 <p>The following people contributed to this work by making suggestions, testing
 code, or providing feedback on drafts. We are grateful for their assistance!</p>
 <ul class="simple">
+<li><p>Larry Bradley</p></li>
 <li><p>Nicolás Cardiel</p></li>
 <li><p>Simon Conseil</p></li>
 <li><p>Lia Corrales</p></li>
